# fspctl

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  arm.cmake  arm.sh  deploy.sh  subscribe.sh
beaglebone/: README.md
beaglebone/home/alarm/: pacman-upgrade.sh
beaglebone/lib/systemd/system/: arch-upgrade.service  arch-upgrade.timer
src/: fconf.c  fconf.h  fenergy.c  fenergy.h  fmqtt.c  fmqtt.h  freg.c  freg.h  futil.c  futil.h  main.c
